# ta-da-blog

./: .bandit  .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
tada/alembic/: env.py
tada/alembic/versions/: 58eedfaec3c4_change_state_to_status.py  64936edf6fcf_first_migration.py
tada/scripts/: start
tada/src/: config.py  logging.ini  main.py  middlewares.py
tada/src/api/: models.py
tada/src/api/v1/: endpoints.py  schemas.py
tada/src/database/: models.py  session.py
tada/tests/: conftest.py  factories.py  tests_articles.py
